[gd_scene load_steps=7 format=3 uid="uid://w36g7jyh6bnb"]

[ext_resource type="PackedScene" uid="uid://bwkgq2rmtxyms" path="res://BaseJoke/base_joke.tscn" id="1_7hv6r"]
[ext_resource type="Script" path="res://SpaceMan/SpaceMan.gd" id="2_jfta8"]
[ext_resource type="Texture2D" uid="uid://dh5nxss684tpc" path="res://SpaceMan/space-sprites/theFinalFrontier.png" id="3_murs0"]
[ext_resource type="PackedScene" uid="uid://cdh4ap1x42t0q" path="res://SpaceMan/Ship.tscn" id="5_1qm8d"]
[ext_resource type="Texture2D" uid="uid://bttmy1rb4as3l" path="res://SpaceMan/space-sprites/astro_glove.png" id="5_24kol"]

[sub_resource type="Theme" id="Theme_qp1xe"]

[node name="Spaceman" instance=ExtResource("1_7hv6r")]
script = ExtResource("2_jfta8")

[node name="BackgroundColor" parent="." index="0"]
color = Color(0.596078, 1, 1, 1)

[node name="Panel" type="ColorRect" parent="." index="1"]
offset_left = -4.0
offset_right = 719.0
offset_bottom = 734.0
theme = SubResource("Theme_qp1xe")
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="Panel" index="0"]
layout_mode = 0
offset_left = 8.0
offset_top = 13.0
offset_right = 728.0
offset_bottom = 733.0
texture = ExtResource("3_murs0")

[node name="Sprite2D" type="Sprite2D" parent="." index="4"]
position = Vector2(360, 582)
scale = Vector2(0.578125, 0.578125)

[node name="Control2" type="Control" parent="Sprite2D" index="0"]
layout_mode = 3
anchors_preset = 0
offset_left = -291.0
offset_top = 36.0
offset_right = 308.0
offset_bottom = 153.0

[node name="Control3" type="Control" parent="Sprite2D" index="1"]
layout_mode = 3
anchors_preset = 0
offset_left = -285.0
offset_top = 154.0
offset_right = -133.0
offset_bottom = 192.0

[node name="Control4" type="Control" parent="Sprite2D" index="2"]
layout_mode = 3
anchors_preset = 0
offset_left = 156.0
offset_top = 150.0
offset_right = 301.0
offset_bottom = 192.0

[node name="Control" type="Control" parent="Sprite2D" index="3"]
layout_mode = 3
anchors_preset = 0
offset_left = -133.0
offset_top = 156.0
offset_right = 153.0
offset_bottom = 199.0

[node name="Ship" parent="." index="5" instance=ExtResource("5_1qm8d")]
position = Vector2(358, 427)
scale = Vector2(3, 3)

[node name="Timer" type="Timer" parent="." index="6"]
wait_time = 3.0
one_shot = true

[node name="JokeSetupLabel" parent="JokeSetupContainer" index="0"]
text = "What is an astronauts favorite part of a computer?"

[node name="glove" type="Sprite2D" parent="." index="8"]
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_24kol")
centered = false
offset = Vector2(-330, -150)

[node name="ColorRect" type="ColorRect" parent="." index="9"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 233.0
offset_top = 424.0
offset_right = 487.0
offset_bottom = 474.0
grow_horizontal = 2
grow_vertical = 2

[node name="InstructionsContainer" parent="." index="10"]
visible = false

[node name="JokePunchlineLabel" parent="JokePunchlineContainer" index="0"]
text = "The \"space\" bar!"

[connection signal="gui_input" from="Sprite2D/Control2" to="." method="_on_control_2_gui_input"]
[connection signal="gui_input" from="Sprite2D/Control3" to="." method="_on_control_3_gui_input"]
[connection signal="gui_input" from="Sprite2D/Control4" to="." method="_on_control_4_gui_input"]
[connection signal="gui_input" from="Sprite2D/Control" to="." method="_on_control_gui_input"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
